tests/snapshots/errors/generic_struct_field_assign_unknown.mc
// Error: assigning to unknown field on generic struct

struct Box<T> {
    value: T
}

let b = Box { value: 42 };
b.unknown = 10;
